# rust-bot

./: .env  Cargo.toml  README.md  episodes.db  episodes.json  questions.json  quotes.json
src/: commands.rs  main.rs
src/commands/: doctor.rs  episode.rs  points.rs  quote.rs
