[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_json = "1.0"
rand = "0.8.5"
ureq = { version = "2.9.1", features = ["json"]}